@@ -596,6 +596,7 @@ All (GUI):
   wxGenericFileDialog which was accidentally lost some time ago (Carl Godkin).
 - Fix handling of fast consecutive clicks in wxRibbonBar (atobi).
 - Fix updating nested window scrollbars in some cases (sbrowne).
+- Improve wxLIST_AUTOSIZE_XXX support in generic wxListCtrl (Kinaou Hervé).
 - Fix wxPGChoices copy ctor (Snoits).
 - Fix wxPixelData<wxImage>::Offset() for alpha (Markus Rollmann).
 - Fix bug in wxImage::ClearAlpha() for shared data (Markus Rollmann).
